--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header{
     padding: 30px; 
 }
 nav{
-    display: flex;
+    display: none;
     align-items: center;
     gap: 30px;
 }
@@ -160,12 +160,12 @@ color: #ffffff;
 }
 
 .noti{
-    width: 50%;
+    width: 65%;
     margin: auto;
     display: flex;
     background-color: #ffffff;
     align-items: center;
-    height: 231px;
+    height: 401px;
     filter: drop-shadow(0px 20px 200px rgba(57, 23, 119, 0.05));
 }
 .noti p{
@@ -177,7 +177,7 @@ color: #000000;
 padding: 10px;
 }
 .sect3{
-    margin: 200px auto;
+    margin: 380px auto;
     width: 85%;
     
 }
@@ -292,7 +292,6 @@ color: #ffffff;
 }
 .full-stat{
  font-size: 16px;
- width: 408px;
  color: #E0E0E0;
 font-style: normal;
 font-weight: 400;
@@ -397,5 +396,90 @@ color: #ffffff;
     display: flex;
     align-items: center;
     gap: 30px;
+}
+@media screen and (max-width:885px) {
+    .sect2{
+        height: 920px;
+    }
+    .noti
+    {
+        margin-top: 20px;
+    }
+    .flx-1, .flx-2{
+        flex-direction: column;
+    }
+   .coins{
+    overflow-x: scroll;
+   }
+   .div1{
+    flex-direction: column;
+   }
+   .strt-min input, .strt-min button{
+    display: none;
+   }
+   
+   .quick-link, .resources{
+    display: none;
+   }
+   .sm{
+    display: none;
+   }
+}
+@media screen and (max-width:480px) {
+.black-fri{
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
+.left, .choose{
+    width: 100%;
+}
+.left h1{
+    width: 100%;
+    font-size: 40px;
+}
+.bs{
+    width: 100%;
+    
+}
+.btc-img img, .div-img{
+    width:90%
+}
+.choose h1, .sect3 h1{
+    width: 100%;
+    font-size: 20px;
+}
+.choose p{
+    width: 100%;
+}
+.sect-4{
+    width: 100%;
+}
+.sect-4 h1{
+    width: 85%;
+    text-align: center;
+    font-size: 20px;
+}
+.div1{
+    width: 85%;
+}
+.strt-min{
+    display: none;
+}
+.acpt{
+    display: none;
+}
+.noti{
+    width: 90%;
+    margin-top: 60px;
+    height: 501px;
+}
+.coins p{
+    width: 100%;
+}
+.coins{
+    gap: 30px;
+}
+
 }
 
